Penambahan css untuk app navigation

--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -9,6 +9,10 @@
     font-size: 12px;
 }
 
+.navbar-custom .dropdown-menu .widget-posts-body {
+	margin-right: 15px;
+}	
+
 .navbar-custom .dropdown-menu .widget-posts-image {
     width: 40px;
 }
