--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -1401,7 +1401,7 @@ a.form-control:hover {
         font-size: 14px;
     }
 
-    #result-map {
+    .module-small-map.bg-main #maps {
         height: 250px !important;
     }
 
