--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -307,7 +307,8 @@
     margin-left: 8px;
 }
 
-.detail.place-detail .box .star {
+.detail.place-detail .box .star,
+.user-post-container .star {
     font-size: 18px;
 }
 
