--- a/backoffice/media/css/custom.css
+++ b/backoffice/media/css/custom.css
@@ -1,3 +1,13 @@
+.dropdown-submenu {
+	position: relative;
+}
+    
+.dropdown-submenu .dropdown-menu {
+	top: 0;
+	left: 100%;
+	margin-top: -1px;
+}
+
 .nav-sm .container.body .col-md-3.left_col {
   width: 70px;
   padding: 0;
