--- a/media/css/colors/default.css
+++ b/media/css/colors/default.css
@@ -1,56 +1,3 @@
-.modal-search {
-	top: 50px;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
-.modal-dialog-search {
-	margin: 0;
-	width: 100%;
-	padding: 0;
-}
-
-.modal-content-search {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	border-radius: 0;
-	box-shadow: none;
-	height: 100%;
-	overflow: auto;
-	overflow-x: hidden;
-}
-
-.modal-header-search {
-	top: -10px;
-	right: 0;
-	left: 0;
-	height: 70px;
-	padding: 10px;
-	background: #fff;
-}
-
-.modal-title-search {
-	font-weight: 300;
-	font-size: 2em;
-	color: #000;
-	line-height: 30px;
-}
-
-.modal-body-search {
-	position: fixed;
-	top: 80px;
-	bottom: 60px;
-	left: 30px;
-	width: 100%;
-	font-weight: 300;
-	overflow: auto;
-	overflow-x: hidden;
-}
-
 .navbar-custom {
     background-color: #00001e;
     text-transform: none;
@@ -247,29 +194,37 @@
     border: none;
 }
 
-.search-box .btn-block + .btn-block {
+.search-favorite .btn-block + .btn-block,
+.search-special .btn-block + .btn-block,
+.search-order .btn-block + .btn-block {
     margin-top: 0px;
 }
 
-.search-box a.search-field-box .search-field-box-arrow {
+.search-favorite a.search-field-box .search-field-box-arrow,
+.search-special a.search-field-box .search-field-box-arrow,
+.search-order a.search-field-box .search-field-box-arrow {
     border-left: 1px solid #aaa;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     position: absolute;
     height: 32px;
     top: 1px;
-    right: 6px;
+    right: 17px;
     width: 20px;
 }
 
-.search-box a.search-field-box i {
+.search-favorite a.search-field-box i,
+.search-special a.search-field-box i,
+.search-order a.search-field-box i {
     position: absolute;
     top: 9px;
     right: 7px;
     color: #888;
 }
 
-.search-box .search-label {
+.search-favorite .search-label,
+.search-special .search-label,
+.search-order .search-label {
     color: #444 !important;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -280,22 +235,28 @@
     vertical-align: middle;
 }
 
-.search-box .search-label:hover {
+.search-favorite .search-label:hover,
+.search-special .search-label:hover,
+.search-order .search-label:hover {
     color: #000 !important;
 }
 
-.search-box .search-label.more-option {
+.search-favorite .search-label.more-option,
+.search-special .search-label.more-option,
+.search-order .search-label.more-option {
 	padding: 0;
 	text-transform: none;
 	font-size: 13px;
 }
 
-.search-box .search-field-box-clear {
+.search-favorite .search-field-box-clear,
+.search-special .search-field-box-clear,
+.search-order .search-field-box-clear {
     position: absolute;
     color: #000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    top: 0px;
-    right: 35px;
+    top: -1px;
+    right: 43px;
     font-size: 20px;
     font-weight: 700;
     opacity: 0.4;
@@ -303,7 +264,9 @@
     cursor: pointer;
 }
 
-.search-box .search-field-box-clear:hover {
+.search-favorite .search-field-box-clear:hover,
+.search-special .search-field-box-clear:hover,
+.search-order .search-field-box-clear:hover {
     opacity: 0.6;
     filter: alpha(opacity=60);
 }
@@ -1249,6 +1212,63 @@ a.form-control:hover {
 #modal-product-category > .modal-dialog > .modal-content > .modal-body .product-list {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.modal-search {
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1030;
+}
+
+.modal-dialog-search {
+	margin: 0;
+	width: 100%;
+	padding: 0;
+}
+
+.modal-content-search {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border-radius: 0;
+	box-shadow: none;
+	height: 100%;
+	overflow: auto;
+	overflow-x: hidden;
+}
+
+.modal-header-search {
+	top: -10px;
+	right: 0;
+	left: 0;
+	height: 70px;
+	padding: 10px;
+}
+
+.modal-title-search {
+	font-weight: 300;
+	font-size: 2em;
+	color: #000;
+	line-height: 30px;
+}
+
+.modal-body-search {
+	position: relative;
+	top: 80px;
+	bottom: 60px;
+	left: 30px;
+	width: 100%;
+	font-weight: 300;
+	overflow: auto;
+	overflow-x: hidden;
+}
+
+.modal-body-search .facility-filter {
+	text-align: left;
 }
 
 /*general - pagination*/
